@@ -3,22 +3,26 @@ package tech.jhipster.lite.cucumber;
 import io.cucumber.java.Before;
 import io.cucumber.spring.CucumberContextConfiguration;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.SpringBootTest.WebEnvironment;
 import org.springframework.boot.test.web.client.TestRestTemplate;
-import org.springframework.http.client.BufferingClientHttpRequestFactory;
-import org.springframework.http.client.ClientHttpRequestFactory;
-import org.springframework.http.client.ClientHttpRequestInterceptor;
-import org.springframework.http.client.ClientHttpResponse;
-import org.springframework.http.client.SimpleClientHttpRequestFactory;
+import org.springframework.http.client.*;
 import org.springframework.http.converter.StringHttpMessageConverter;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.web.client.RestTemplate;
 import tech.jhipster.lite.JHLiteApp;
+import tech.jhipster.lite.cucumber.rest.CucumberRestTestContext;
+import tech.jhipster.lite.project.infrastructure.secondary.FakedFileSystemProjectFilesConfiguration;
+import tech.jhipster.lite.project.infrastructure.secondary.MockedProjectFormatterConfiguration;
 
+@ActiveProfiles("test")
 @CucumberContextConfiguration
-@SpringBootTest(classes = { JHLiteApp.class }, webEnvironment = WebEnvironment.RANDOM_PORT)
+@SpringBootTest(
+  classes = { JHLiteApp.class, MockedProjectFormatterConfiguration.class, FakedFileSystemProjectFilesConfiguration.class },
+  webEnvironment = WebEnvironment.RANDOM_PORT
+)
 public class CucumberConfiguration {
 
   @Autowired
@@ -26,7 +30,7 @@ public class CucumberConfiguration {
 
   @Before
   public void resetTestContext() {
-    CucumberTestContext.reset();
+    CucumberRestTestContext.reset();
   }
 
   @Before
@@ -35,23 +39,15 @@ public class CucumberConfiguration {
 
     RestTemplate template = rest.getRestTemplate();
     template.setRequestFactory(requestFactory);
-    template.setInterceptors(Arrays.asList(mockedCsrfTokenInterceptor(), saveLastResultInterceptor()));
-    template.getMessageConverters().add(0, new StringHttpMessageConverter(StandardCharsets.UTF_8));
-  }
-
-  private ClientHttpRequestInterceptor mockedCsrfTokenInterceptor() {
-    return (request, body, execution) -> {
-      request.getHeaders().add("mocked-csrf-token", "MockedToken");
-
-      return execution.execute(request, body);
-    };
+    template.setInterceptors(List.of(saveLastResultInterceptor()));
+    template.getMessageConverters().addFirst(new StringHttpMessageConverter(StandardCharsets.UTF_8));
   }
 
   private ClientHttpRequestInterceptor saveLastResultInterceptor() {
     return (request, body, execution) -> {
       ClientHttpResponse response = execution.execute(request, body);
 
-      CucumberTestContext.addResponse(request, response, execution, body);
+      CucumberRestTestContext.addResponse(request, response, execution, body);
 
       return response;
     };
