@@ -1,17 +1,14 @@
-package com.jhipster.test.cucumber;
+package tech.jhipster.jhlitest.cucumber;
 
-import com.jhipster.test.MyappApp;
-import com.jhipster.test.cucumber.CucumberConfiguration.CucumberRestTemplateConfiguration;
 import com.mycompany.myapp.cucumber.CucumberConfiguration.CucumberRestTemplateConfiguration;
-import com.mycompany.myapp.cucumber.CucumberRestTemplate;
+import com.mycompany.myapp.cucumber.rest.CucumberRestTemplate;
 import io.cucumber.java.Before;
 import io.cucumber.spring.CucumberContextConfiguration;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.SpringBootTest.WebEnvironment;
-import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.context.annotation.Bean;
@@ -22,6 +19,7 @@ import org.springframework.http.client.ClientHttpResponse;
 import org.springframework.http.client.SimpleClientHttpRequestFactory;
 import org.springframework.http.converter.StringHttpMessageConverter;
 import org.springframework.web.client.RestTemplate;
+import tech.jhipster.jhlitest.MyappApp;
 
 @CucumberContextConfiguration
 @SpringBootTest(classes = { MyappApp.class, CucumberRestTemplateConfiguration.class }, webEnvironment = WebEnvironment.RANDOM_PORT)
@@ -32,7 +30,7 @@ public class CucumberConfiguration {
 
   @Before
   public void resetTestContext() {
-    CucumberTestContext.reset();
+    CucumberRestTestContext.reset();
   }
 
   @Before
@@ -41,23 +39,15 @@ public class CucumberConfiguration {
 
     RestTemplate template = rest.getRestTemplate();
     template.setRequestFactory(requestFactory);
-    template.setInterceptors(Arrays.asList(mockedCsrfTokenInterceptor(), saveLastResultInterceptor()));
+    template.setInterceptors(List.of(saveLastResultInterceptor()));
     template.getMessageConverters().add(0, new StringHttpMessageConverter(StandardCharsets.UTF_8));
-  }
-
-  private ClientHttpRequestInterceptor mockedCsrfTokenInterceptor() {
-    return (request, body, execution) -> {
-      request.getHeaders().add("mocked-csrf-token", "MockedToken");
-
-      return execution.execute(request, body);
-    };
   }
 
   private ClientHttpRequestInterceptor saveLastResultInterceptor() {
     return (request, body, execution) -> {
       ClientHttpResponse response = execution.execute(request, body);
 
-      CucumberTestContext.addResponse(request, response, execution, body);
+      CucumberRestTestContext.addResponse(request, response, execution, body);
 
       return response;
     };
